<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floralWhite"
    android:focusable="true"
    android:focusableInTouchMode="true">



    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageLogoMain"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/logo400px"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/loginCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/xLargeMargin"
                android:layout_marginTop="@dimen/normalMargin"
                android:layout_marginEnd="@dimen/xLargeMargin"
                app:cardElevation="@dimen/normalElevation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageLogoMain">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/normalMargin">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Email address"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/largeFont" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/userNameField"
                        app:errorEnabled="true"
                        app:helperTextEnabled="true"
                        app:helperText="Minimum length: 8"
                        app:counterEnabled="true"
                        app:counterMaxLength="64"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#CFE1F3"
                            android:maxLines="1"
                            android:textAlignment="viewStart"
                            android:textSize="@dimen/largeFont" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/authorization_code"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/largeFont" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/authorizationCodeField"
                        app:errorEnabled="true"
                        app:counterEnabled="true"
                        app:counterMaxLength="64"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/authorizationCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#CFE1F3"
                            android:maxLines="1"
                            android:textAlignment="viewStart"
                            android:textSize="@dimen/largeFont" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/new_password"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/largeFont" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordField"
                        app:errorEnabled="true"
                        app:helperTextEnabled="true"
                        app:helperText="Minimum length: 8"
                        app:counterEnabled="true"
                        app:counterMaxLength="64"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorPrimaryDark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#CFE1F3"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textAlignment="viewStart"
                            android:textSize="@dimen/largeFont" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/largeMargin"
                        android:text="@string/retype_password"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/largeFont" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/retypePasswordField"
                        app:errorEnabled="true"
                        app:helperTextEnabled="true"
                        app:helperText="Minimum length: 8"
                        app:counterEnabled="true"
                        app:counterMaxLength="64"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorPrimaryDark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/retypePassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#CFE1F3"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textAlignment="viewStart"
                            android:textSize="@dimen/largeFont" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonResetPassword"
                style="@style/RegularButtonStyle"
                android:layout_marginTop="12dp"
                android:text="Reset Password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginCardView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonResetPassword"
                app:layout_constraintVertical_bias="0.07999998">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/RegularFontStyle"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/don_t_have_an_account" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btnSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/largeMargin"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/normalFont" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/xLargeMargin"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/RegularFontStyle"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/don_t_have_authorization_code" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btnForgetPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/largeMargin"

                        android:text="@string/request_new_code"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/normalFont" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>