<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floralWhite"
    android:focusable="true"
    android:focusableInTouchMode="true">



    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/footerLayout"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnFoodSafetyManagement"
                    style="@style/RegularButtonStyle"
                    android:layout_width="250dp"
                    android:layout_height="@dimen/regularButtonHeight"
                    android:layout_marginTop="@dimen/xLargeMargin"
                    android:text="Food Safety Management"
                    android:textColor="@color/colorPrimaryDark" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnInventoryControl"
                    style="@style/RegularButtonStyle"
                    android:layout_width="250dp"
                    android:layout_height="@dimen/regularButtonHeight"
                    android:layout_marginTop="@dimen/xLargeMargin"
                    android:text="Inventory Control"
                    android:textColor="@color/colorPrimaryDark" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnReports"
                    style="@style/RegularButtonStyle"
                    android:layout_width="250dp"
                    android:layout_height="@dimen/regularButtonHeight"
                    android:layout_marginTop="@dimen/xLargeMargin"
                    android:text="View Reports"
                    android:textColor="@color/colorPrimaryDark" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSettings"
                    style="@style/RegularButtonStyle"
                    android:layout_width="250dp"
                    android:layout_height="@dimen/regularButtonHeight"
                    android:layout_marginTop="@dimen/xLargeMargin"
                    android:text="Setup"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>




            <LinearLayout
                android:id="@+id/footerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogOut"
                    android:layout_width="150dp"
                    android:layout_height="@dimen/regularButtonHeight"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@color/minionYellow"
                    style="@style/RegularButtonStyle"
                    android:text="@string/logout"/>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/RegularFontStyle"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_margin="@dimen/xLargeMargin"
                    android:text="@string/any_issues_with_the_application" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnContactAdmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/largeMargin"
                    android:text="@string/contact_support"
                    android:layout_marginBottom="@dimen/xLargeMargin"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/normalFont" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>